[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Globals/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnJoin" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -367.476
margin_top = -24.3279
margin_right = -267.476
margin_bottom = 25.6721
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnHost" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 282.524
margin_top = -24.3279
margin_right = 382.524
margin_bottom = 25.6721
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnStart" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = -10.0
margin_right = 20.5
margin_bottom = 10.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="BtnJoin" to="." method="_on_BtnJoin_button_up"]
[connection signal="button_up" from="BtnHost" to="." method="_on_BtnHost_button_up"]
[connection signal="button_down" from="BtnStart" to="." method="_on_BtnStart_button_down"]
